<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
     <RelativeLayout
        android:id="@+id/layout_login_topbar"
        style="@style/TopbarStyle" >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="6dp"
            android:src="@drawable/flight_title_back_normal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login_title"
            android:textColor="#101010"
            android:textSize="@dimen/medium_text_size"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layout_bottom_bar"
        android:layout_below="@+id/layout_login_topbar"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
	         android:layout_height="120dp"
	         android:background="@drawable/login_top_bg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp" >

                <TextView
                    android:id="@+id/tv_uid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="18dp"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/medium_text_size" />

                <EditText
                    android:id="@+id/edit_uid"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/tv_uid"
                    android:layout_margin="3dp"
                    android:background="@null"
                    android:hint="@string/user_name_hint"
                    android:singleLine="true"
                    android:textSize="@dimen/small_medium_text_size" >

                    <requestFocus />
                </EditText>

                <ImageView
                    android:id="@+id/img_login_clear_uid"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/edit_uid"
                    android:src="@drawable/login_delete_data_icon"
                    android:visibility="invisible"/>

            </RelativeLayout>
			<View 
			    android:layout_width="match_parent"
			    android:layout_height="1px"
			    android:layout_marginLeft="64dp"
			    android:background="#ffcccccc"/>

			<RelativeLayout
			    android:layout_width="match_parent"
			    android:layout_height="50dp" >

				<ImageView
				    android:id="@+id/img_login_clear_psw"
				    android:layout_width="20dp"
				    android:layout_height="wrap_content"
				    android:layout_centerVertical="true"
				    android:layout_toRightOf="@+id/edit_psw"
				    android:src="@drawable/login_delete_data_icon"
				    android:visibility="invisible"/>

				<ToggleButton
				    android:id="@+id/tgbtn_show_psw"
				    android:layout_width="54dp"
				    android:layout_height="30dp"
				    android:layout_centerVertical="true"
				    android:layout_alignParentRight="true"
				    android:layout_marginRight="15dp"
				    android:textOn=""
				    android:textOff=""
				    android:background="@drawable/switch_in" />

				<TextView
				    android:id="@+id/tv_psw"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_alignParentLeft="true"
				    android:layout_centerVertical="true"
				    android:layout_marginLeft="18dp"
				    android:text="@string/user_password"
				    android:textColor="@color/black"
				    android:textSize="@dimen/medium_text_size" />

				<EditText
				    android:id="@+id/edit_psw"
				    android:layout_width="156dp"
				    android:layout_height="wrap_content"
				    android:layout_centerVertical="true"
				    android:layout_toRightOf="@+id/tv_psw"
				    android:layout_margin="3dp"
				    android:background="@null"
				    android:hint="@string/password_edit_hint"
				    android:inputType="textPassword"
				    android:textSize="@dimen/small_middle_text_size" />

			</RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_margin="@dimen/item_margin_large"
            android:background="@drawable/btn_ok"
            android:text="@string/login_bt_text"
            android:textColor="#C0C0C0"
            android:enabled="false" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_quick_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="6dp"
                android:padding="10dp"
                android:text="@string/phone_quickly_register"
                android:textSize="@dimen/small_middle_text_size" />

            <TextView
                android:id="@+id/tv_find_back_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="6dp"
                android:padding="10dp"
                android:text="@string/find_my_password" />

        </RelativeLayout>
		<ViewStub 
	        android:id="@+id/vsProgress"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout="@layout/layout_loading"/>
    </LinearLayout>
	
</RelativeLayout>
