<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
     android:layout_height="40dp"
    android:orientation="vertical"
    android:background="#eee">
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="37dp"
		android:orientation="horizontal"
		>       
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/id_ll_chat"
            android:orientation="horizontal">
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/id_tvchat"
                android:text="@string/vegetable"
                android:textColor="#F7A517"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center">
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/goodwin"
                 android:id="@+id/id_tvfriend"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center">
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/mysomething"
                 android:id="@+id/id_tvcontact"/>
        </LinearLayout>
        
    </LinearLayout>
     <ImageView 
        android:layout_width="100dp"
        android:layout_height="3dp"
        android:id="@+id/tabline"
        android:src="@drawable/tab_line"/>

</LinearLayout>
