<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
   	>
    
    <RelativeLayout
        android:id="@+id/layout_not_logined"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/my_personal_not_login_bg"
        android:gravity="center" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/greeting"
                android:paddingLeft="20dp"
                android:textColor="@color/white"
                android:textSize="@dimen/small_medium_text_size" />

            <Button
                android:id="@+id/personal_login_button"
                android:layout_width="90dp"
                android:layout_height="36dp"
                android:layout_below="@+id/tv_login"
                android:layout_marginTop="6dp"
                android:background="@drawable/my_personal_click_login"
                android:gravity="center"
                android:text="@string/bt_login_register"
                android:textColor="@color/login_button"
                android:textSize="@dimen/small_medium_text_size"
                android:textStyle="bold" />
        </RelativeLayout>
		</RelativeLayout>
			<LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_top"
                android:orientation="vertical" >
				<!-- 我的订单 -->
                <LinearLayout
                    android:id="@+id/my_dingdan"
                    style="@style/MineItemStyle"
                    android:background="@drawable/bg_item_top" >

                    <ImageView
                        android:layout_width="26.0dip"
                        android:layout_height="26.0dip"
                        android:layout_marginLeft="20.0dip"
                        android:layout_marginRight="15.0dip"
                        android:scaleType="fitXY"
                        android:src="@drawable/android_personel_quickly_order" />

                    <TextView
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/my_order_form"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_medium_text_size" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/personel_arrow_right" />
                </LinearLayout>
				<!-- 个人信息 -->
                <LinearLayout
                    android:id="@+id/personal_infor"
                    style="@style/MineItemStyle"
                    android:background="@drawable/bg_item_bottom" >

                    <ImageView
                        android:layout_width="26.0dip"
                        android:layout_height="26.0dip"
                        android:layout_marginLeft="20.0dip"
                        android:layout_marginRight="15.0dip"
                        android:scaleType="fitXY"
                        android:src="@drawable/personal_info" />

                    <TextView
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/personal_info"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_medium_text_size" />
						
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:paddingBottom="2.0dip"
                        android:paddingLeft="8.0dip"
                        android:paddingRight="8.0dip"
                        android:paddingTop="2.0dip"
                        android:text=""
                        android:textColor="@color/gray"
                        android:textSize="@dimen/micro_text_size" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/personel_arrow_right" />
                </LinearLayout>
            </LinearLayout>
			
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin_top"
                android:orientation="vertical" >
				
                <LinearLayout
                    android:id="@+id/my_collect"
                    style="@style/MineItemStyle"
                    android:background="@drawable/bg_item_bottom" >

                    <ImageView
                        android:layout_width="26.0dip"
                        android:layout_height="26.0dip"
                        android:layout_marginLeft="20.0dip"
                        android:layout_marginRight="15.0dip"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_collect" />

                    <TextView
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/collect_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_medium_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:paddingBottom="2.0dip"
                        android:paddingLeft="8.0dip"
                        android:paddingRight="8.0dip"
                        android:paddingTop="2.0dip"
                        android:text="@string/collect_string"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/micro_text_size" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/personel_arrow_right" />
                </LinearLayout>
                
                <!-- 我的菜单 -->
                 <LinearLayout
                    android:id="@+id/my_menu"
                    style="@style/MineItemStyle"
                    android:background="@drawable/bg_item_bottom" >

                    <ImageView
                        android:layout_width="26.0dip"
                        android:layout_height="26.0dip"
                        android:layout_marginLeft="20.0dip"
                        android:layout_marginRight="15.0dip"
                        android:scaleType="fitXY"
                        android:src="@drawable/my_menu" />

                    <TextView
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/my_menu"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_medium_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:paddingBottom="2.0dip"
                        android:paddingLeft="8.0dip"
                        android:paddingRight="8.0dip"
                        android:paddingTop="2.0dip"
                        android:text="@string/my_menu_desc"
                        android:textColor="@color/red"
                        android:textSize="@dimen/micro_text_size" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/personel_arrow_right" />
                </LinearLayout>
                
                
			</LinearLayout>
</LinearLayout>
